5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1674_1879.log
== TEST (2019-05-02 08:15:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("Digite o numero de hrs extras trabalhadas:"))
f = float(input("Digite o numero de hrs faltas:"))
h = e - ((1/4)*f)
if(h>400):
	g = 500
	print(e,"extras e",f,"de falta")
	print("R$",round(g,2))
else:
	g = 100
	print(e,"extras e",f,"de falta")
	print("R$",round(g,2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:15:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("Digite o numero de hrs extras trabalhadas:"))
f = float(input("Digite o numero de hrs faltas:"))
h = e - ((1/4)*f)
if(h>400):
	g = 500
	print(e,"extras e",f,"de falta")
	print("R$",round(g,2))
else:
	g = 100
	print(e,"extras e",f,"de falta")
	print("R$",round(g,2))
	
-- EXECUTION TIME:
0.136896
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:17:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("Digite o numero de hrs extras trabalhadas:"))
f = float(input("Digite o numero de hrs faltas:"))
h = e - ((1/4)*f)
if(h>400):
	g = 500
	print(e,"extras e",f,"de falta")
	print("R$",round(g,2))
elif(h<=400):
	g = 100
	print(e,"extras e",f,"de falta")
	print("R$",round(g,2))
else:
	g = 100
	print(e,"extras e",f,"de falta")
	print("R$",round(g,2))
	
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:18:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("Digite o numero de hrs extras trabalhadas:"))
f = float(input("Digite o numero de hrs faltas:"))
h = e - ((1/4)*f)
if(h>400):
	g = 500
	print(e,"extras e",f,"de falta")
	print("R$",round(g,2))
elif(h<=400):
	g = 100
	print(e,"extras e",f,"de falta")
	print("R$",round(g,2))
else:
	g = 100
	print(e,"extras e",f,"de falta")
	print("R$",round(g,2))
	
	
-- EXECUTION TIME:
0.13791
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:20:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("Digite o numero de hrs extras trabalhadas:"))
f = float(input("Digite o numero de hrs faltas:"))
h = e - ((1/4)*f)
print (h)
#if(h>400):
	g = 500
	print(e,"extras e",f,"de falta")
	print("R$",round(g,2))
#elif(h<=400):
	g = 100
	print(e,"extras e",f,"de falta")
	print("R$",round(g,2))
#else:
	g = 100
	print(e,"extras e",f,"de falta")
	print("R$",round(g,2))
	
	
-- ERROR:
File "XXXX", line 7
    g = 500
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:20:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("Digite o numero de hrs extras trabalhadas:"))
f = float(input("Digite o numero de hrs faltas:"))
h = e - ((1/4)*f)
print (h)
#if(h>400):
	#g = 500
	#print(e,"extras e",f,"de falta")
	#print("R$",round(g,2))
#elif(h<=400):
	#g = 100
	#print(e,"extras e",f,"de falta")
	#print("R$",round(g,2))
#else:
	#g = 100
	#print(e,"extras e",f,"de falta")
	#print("R$",round(g,2))
	
	
-- OUTPUT:
415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:22:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("Digite o numero de hrs extras trabalhadas:"))
F = float(input("Digite o numero de hrs faltas:"))
H = e - ((1/4)*f)
if(H>400):
	g = 500
	print(E,"extras e",F,"de falta")
	print("R$",round(g,2))
elif(H<=400):
	g = 100
	print(E,"extras e",F,"de falta")
	print("R$",round(g,2))
else:
	g = 100
	print(E,"extras e",F,"de falta")
	print("R$",round(g,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    H = e - ((1/4)*f)
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:23:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("Digite o numero de hrs extras trabalhadas:"))
F = float(input("Digite o numero de hrs faltas:"))
H = E - ((1/4)*F)
if(H>400):
	g = 500
	print(E,"extras e",F,"de falta")
	print("R$",round(g,2))
elif(H<=400):
	g = 100
	print(E,"extras e",F,"de falta")
	print("R$",round(g,2))
else:
	g = 100
	print(E,"extras e",F,"de falta")
	print("R$",round(g,2))
	
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:23:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("Digite o numero de hrs extras trabalhadas:"))
F = float(input("Digite o numero de hrs faltas:"))
H = E - ((1/4)*F)
if(H>400):
	g = 500
	print(E,"extras e",F,"de falta")
	print("R$",round(g,2))
else:
	g = 100
	print(E,"extras e",F,"de falta")
	print("R$",round(g,2))
	
	
-- EXECUTION TIME:
0.125672
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:24:26) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("Digite o numero de hrs extras trabalhadas:"))
F = float(input("Digite o numero de hrs faltas:"))
H = E - ((1/4)*F)
if(H>400):
	G = 500
	print(E,"extras e",F,"de falta")
	print("R$",round(G,2))
else:
	G = 100
	print(E,"extras e",F,"de falta")
	print("R$",round(G,2))
	
	
-- EXECUTION TIME:
0.16642
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:26:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("Digite o numero de hrs extras trabalhadas:"))
F = float(input("Digite o numero de hrs faltas:"))
H = E - ((1/4)*F)
print(E,"extras e",F,"de falta")
if(H>400):
	G = 500
	print("R$",round(G,2))
else:
	G = 100
	print("R$",round(G,2))
	
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:26:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("Digite o numero de hrs extras trabalhadas:"))
F = float(input("Digite o numero de hrs faltas:"))
H = E - ((1/4)*F)
print(E,"extras e",F,"de falta")
if(H>400):
	G = 500
	print("R$",round(G,2))
else:
	G = 100
	print("R$",round(G,2))
	
	
-- EXECUTION TIME:
0.163164
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:39:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
E = float(input("Digite o numero de hrs extras trabalhadas:"))
F = float(input("Digite o numero de hrs faltas:"))
H = E - ((1/4)*F)
print(E,"extras e",F,"de falta")
if(E>0 and F>0):
	if(H>400):
		G= 500
	   print("R$",round(G,2))
	else:
		G = 100
	   print("R$",round(G,2))
else:
	E = float(input("Digite o numero de hrs extras trabalhadas:"))
   F = float(input("Digite o numero de hrs faltas:"))
	if(E>0 and F>0):
	if(H>400):
		G= 500
	   print("R$",round(G,2))
	else:
		G = 100
	   print("R$",round(G,2))
	
	
-- EXECUTION TIME:
0.123902
-- ERROR:
  File "/home/codebench/codes/1674/1879/main.py", line 9
    print("R$",round(G,2))
                         ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
